--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "series-map",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "map values by a series of values",
   "main": "series-map.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
+    "prepublish": "sed -e 's/module\\.exports =/export default/' series-map.js > series-map-es6.js",
     "test": "mocha"
   },
   "repository": {
